--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,18 @@
 .header-link:hover {
   color: #2196f3;
 }
+.header-link2 {
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+.header-link2:hover {
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
 
 /* Шапка */
 .motto {
@@ -163,12 +175,14 @@
 .footer-list {
 }
 .footer-location {
+  font-style: normal;
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.03em;
   color: #ffffff;
 }
 .footer-link {
+  font-style: normal;
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.03em;
@@ -176,11 +190,11 @@
 }
 
 /* PORTFOLIO-HTML */
-/* Клавиши ориентации */
+
+/* Главный контент */
 .nav-list {
 }
 .nav-btn {
-  font-weight: 500;
   font-size: 16px;
   line-height: 26px;
   text-align: center;
@@ -193,8 +207,12 @@
   background: #2196f3;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
+  font-size: 16px;
+  line-height: 26px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #ffffff;
 }
-/* Главный контент */
 .maincontant {
 }
 .maincontant-list {
