--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 /* ОБЩИЕ КЛАССЫ */
-.body {
+body {
   background: #e5e5e5;
   font-family: Roboto;
 }
@@ -17,24 +17,21 @@
 /* Логотип */
 .logo {
   font-family: Raleway;
-  font-weight: bold;
-  font-size: 26px;
-  line-height: 31px;
+  font-weight: 700;
+  line-height: 1.19;
   letter-spacing: 0.03em;
   color: #2196f3;
 }
 .logo-header-studio {
   font-family: Raleway;
-  font-weight: bold;
-  font-size: 26px;
-  line-height: 31px;
+  font-weight: 700;
+  line-height: 1.19;
   letter-spacing: 0.03em;
   color: #000000;
 }
 .logo-footer-studio {
-  font-weight: bold;
-  font-size: 26px;
-  line-height: 31px;
+  font-weight: 700;
+  line-height: 1.19;
   letter-spacing: 0.03em;
   color: #ffffff;
 }
@@ -46,8 +43,7 @@
 .header-list2 {
 }
 .header-link {
-  font-size: 14px;
-  line-height: 16px;
+  line-height: 1.14;
   letter-spacing: 0.02em;
   color: #212121;
 }
@@ -55,14 +51,12 @@
   color: #2196f3;
 }
 .header-link2 {
-  font-size: 14px;
-  line-height: 16px;
+  line-height: 1.14;
   letter-spacing: 0.02em;
   color: #757575;
 }
 .header-link2:hover {
-  font-size: 14px;
-  line-height: 16px;
+  line-height: 1.14;
   letter-spacing: 0.02em;
   color: #2196f3;
 }
@@ -72,17 +66,15 @@
   background: #2f303a;
 }
 .motto-h1 {
-  font-size: 44px;
-  line-height: 60px;
+  line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #ffffff;
 }
 .motto-btn {
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 30px;
+  font-weight: 700;
+  line-height: 1.88;
   display: flex;
   align-items: center;
   text-align: center;
@@ -99,16 +91,14 @@
 .description-list {
 }
 .description-h3 {
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 16px;
+  font-weight: 700;
+  line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #212121;
 }
 .description-p {
-  font-size: 14px;
-  line-height: 24px;
+  line-height: 1.71;
   letter-spacing: 0.03em;
   color: #757575;
 }
@@ -117,12 +107,10 @@
 .photo {
 }
 .photo-h2 {
-  font-weight: bold;
-  font-size: 36px;
-  line-height: 42px;
+  font-weight: 700;
+  line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
-
   color: #212121;
 }
 .photo-list {
@@ -134,9 +122,8 @@
 .team {
 }
 .team-h2 {
-  font-weight: bold;
-  font-size: 36px;
-  line-height: 42px;
+  font-weight: 700;
+  line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
@@ -152,15 +139,13 @@
 .team-img {
 }
 .team-h3 {
-  font-size: 16px;
-  line-height: 19px;
+  line-height: 1.19;
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
 }
 .team-p {
-  font-size: 16px;
-  line-height: 19px;
+  line-height: 1.19;
   text-align: center;
   letter-spacing: 0.03em;
   color: #757575;
@@ -176,15 +161,13 @@
 }
 .footer-location {
   font-style: normal;
-  font-size: 14px;
-  line-height: 24px;
+  line-height: 1.71;
   letter-spacing: 0.03em;
   color: #ffffff;
 }
 .footer-link {
   font-style: normal;
-  font-size: 14px;
-  line-height: 24px;
+  line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
@@ -195,8 +178,7 @@
 .nav-list {
 }
 .nav-btn {
-  font-size: 16px;
-  line-height: 26px;
+  line-height: 1.63;
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
@@ -207,8 +189,7 @@
   background: #2196f3;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-  font-size: 16px;
-  line-height: 26px;
+  line-height: 1.63;
   text-align: center;
   letter-spacing: 0.03em;
   color: #ffffff;
@@ -226,15 +207,13 @@
 .maincontant-img {
 }
 .maincontant-h3 {
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 36px;
+  font-weight: 700;
+  line-height: 2;
   letter-spacing: 0.06em;
   color: #212121;
 }
 .maincontant-p {
-  font-size: 16px;
-  line-height: 30px;
+  line-height: 1.88;
   letter-spacing: 0.03em;
   color: #757575;
 }
