--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 /* ОБЩИЕ КЛАССЫ */
 body {
   background: #e5e5e5;
-  font-family: Roboto, sans-serif;
+  font-family: Roboto;
 }
 .btn {
   cursor: pointer;
@@ -226,6 +226,7 @@ body {
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
+  font-family: Roboto;
 }
 .nav-btn:hover {
   background: #2196f3;
